test/Debug/Errors/UndefinedToken.k
// written by kimio
System.p('a');
